--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 	  background-color:white;
 	  border:1px solid black;
 	  padding:10px 10px 10px 10px;
-	border-raduis:0px
+	  border-raduis:10px;
 	  
 	  
 }
