--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,45 @@
 /*  your css code here. If applicable */
+*{
+	margin:0px;
+	padding:0px;
+	box-sizing:border-box;
+}
+body{
+	background-color:#cccccc;
+	
+}
+h1{
+    margin:10px 10px 20px 10px;
+	text-align:center;
+}
 .player_one{
+	  margin:20px 20px 5px 20px;
+	  padding:20px;
 	  background-color:white;
-	  border:1px solid black;
-	  padding:10px 10px 10px 10px;
-	  border-raduis:10px;
-	  
-	  
+	  border:2px solid black;
+	  border-radius:7px	  
 }
 a{
 	color:black;
 	text-decoration:none;
 }
-body{
-	background-color:#cccccc;
-	
+h2{ 
+	text-align:center;
+}
+video{
+		width:100%;
+	    heigth:100%;
+	}
+h3{
+	margin-bottom:10px;
+}
+audio{
+	width:100%;
+}
+.player_two{
+	margin:20px 50px 10px 50px ;
+	padding:20px;
+	background:white;
+	border:2px solid black;
+	border-radius:7px;
 }
